samples/_failures_safe/1761321199_8cffc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b77e1c5.c: In function ‘main’:
./samples/SAFE/__tmp_5b77e1c5.c:178:10: error: ‘t’ undeclared (first use in this function)
  178 |     if (!t
      |          ^
./samples/SAFE/__tmp_5b77e1c5.c:178:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5b77e1c5.c:178:11: error: expected ‘)’ at end of input
  178 |     if (!t
      |        ~  ^
      |           )
./samples/SAFE/__tmp_5b77e1c5.c:178:5: error: expected declaration or statement at end of input
  178 |     if (!t
      |     ^~
